- se añaden dos botones. Alimentar y Acaricear.

--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -30,3 +30,11 @@ and open the template in the editor.
 .back-img{
     width: 100%;
 }
+
+.img-mascota{
+    width: 100%;
+}
+
+.img-mascota-change{
+    width: 70%;
+}
