--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -20,11 +20,12 @@ and open the template in the editor.
 }
 
 .img-back{
-    width: 70%;
+    width: 50%;
 }
 
 .div-back{
     text-align: center;
+    margin-bottom: 20px;
 }
 
 .back-img{
