--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -33,9 +33,58 @@ and open the template in the editor.
 }
 
 .img-mascota{
-    width: 100%;
+    width: 90%;
+}
+
+.img-change{
+    width: 90%;	
+    filter: blur(5px);
 }
 
 .img-mascota-change{
     width: 70%;
+}
+
+.img-efecto{
+    bottom: 0px;
+    left: 0px;
+    width: 100%;
+    position: absolute;
+    
+    animation-duration: 3s;
+    animation-name: slidein;
+}
+
+.img-efecto-correr{
+    bottom: 0px;
+    left: 0px;
+    width: 40%;
+    position: absolute;
+    
+    animation-duration: 4s;
+    animation-name: slidein-run;
+}
+
+body{
+    overflow-y:hidden;
+}
+
+@keyframes slidein {
+  from {    
+    margin-bottom: 100%;
+  }
+
+  to {
+    margin-bottom: 0%;
+  }
+}
+
+@keyframes slidein-run {
+  from {    
+    margin-left: 0%;
+  }
+
+  to {
+    margin-left: 50%;
+  }
 }
